--- a/form.html
+++ b/form.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 <head>
 	<title>Comment Form</title>
 </head>
 <body>
-  <form action = "insert.php" method = "post" id="CommentForm" >
+  <form action = "insert.php" method = "post" id="CommentForm" class="form-group">
     Name:<br>
     <input type="text" name = "name" id="idName" placeholder="Enter Name"> <br>
     Comment:<br>
     <textarea rows="10" cols="20" name = "comment" id="idComment" placeholder="Enter Comment"></textarea><br>  
     Link:<br>
     <input type="text" name = "link" id="idLink" placeholder="Enter Link"> <br><br>
-    <input type="submit" id="commentBtn">
+    <input type="submit" id="commentBtn"class="btn btn-outline-warning">
   </form> 
 </body>
 </html>
