--- a/form.html
+++ b/form.html
@@ -1,9 +1,10 @@
-<!DOCTYPE html>
-<html>
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-<head>
-	<title>Comment Form</title>
-</head>
+<?php
+$id=$_GET['ID'];
+$conn = mysqli_init();
+mysqli_real_connect($conn, 'databaseitf.mysql.database.azure.com', 'superoof@databaseitf', 'Pin187932', 'itflab', 3306);
+$res = mysqli_query($conn, "SELECT * FROM guestbook WHERE ID='$id'");
+$row = mysqli_fetch_array($res)
+?>
 <style>
 input[type=text], select {
   width: 70%;
@@ -36,17 +37,14 @@ div {
   padding: 20px;
 }
 </style>
-<body>
-	<div>
-  <form action = "insert.php" method = "post" id="CommentForm" class="form-group">
-    <label for="idName" style="margin: auto 120px">Name</label>
-    <input type="text" name = "name" id="idName" placeholder="Enter Name"> <br>
-    <label for="idComment" style="margin: auto 120px">Comment</label>
-    <input type="text" name = "comment" id="idComment" placeholder="Enter Comment"></input><br>
-		<label for="idLink" style="margin: auto 120px">Link</label>
-    <input type="text" name = "link" id="idLink" placeholder="Enter Link"> <br><br>
+<div>
+<form action = "update.php?ID=<?php echo $row['ID']; ?>" method = "post" id="CommentForm">
+    Name:<br>
+    <input type="text" name = "Name" id="idName" value="<?php echo "$row[Name]"; ?>" <br>
+    Comment:<br>
+    <input type="text" name = "Comment" id="idComment" value="<?php echo "$row[Comment]"; ?>" <br>
+    Link:<br>
+    <input type="text" name = "Link" id="idLink" value="<?php echo "$row[Link]"; ?>"> <br><br>
     <input type="submit" id="commentBtn"class="btn btn-outline-warning">
+</div>
   </form>
-	</div>
-</body>
-</html>
