--- a/form.html
+++ b/form.html
@@ -1,10 +1,6 @@
-<?php
-$id=$_GET['ID'];
-$conn = mysqli_init();
-mysqli_real_connect($conn, 'databaseitf.mysql.database.azure.com', 'superoof@databaseitf', 'Pin187932', 'itflab', 3306);
-$res = mysqli_query($conn, "SELECT * FROM guestbook WHERE ID='$id'");
-$row = mysqli_fetch_array($res)
-?>
+<head>
+	<title>Comment Form</title>
+</head>
 <style>
 input[type=text], select {
   width: 70%;
@@ -37,14 +33,20 @@ div {
   padding: 20px;
 }
 </style>
-<div>
-<form action = "update.php?ID=<?php echo $row['ID']; ?>" method = "post" id="CommentForm">
+<body>
+	<div>
+  <form action = "insert.php" method = "post" id="CommentForm" class="form-group">
     Name:<br>
-    <input type="text" name = "Name" id="idName" value="<?php echo "$row[Name]"; ?>" <br>
+    <label for="idName" style="margin: auto 120px">Name</label>
+    <input type="text" name = "name" id="idName" placeholder="Enter Name"> <br>
     Comment:<br>
-    <input type="text" name = "Comment" id="idComment" value="<?php echo "$row[Comment]"; ?>" <br>
+    <textarea rows="10" cols="20" name = "comment" id="idComment" placeholder="Enter Comment"></textarea><br>  
     Link:<br>
-    <input type="text" name = "Link" id="idLink" value="<?php echo "$row[Link]"; ?>"> <br><br>
+    <label for="idComment" style="margin: auto 120px">Comment</label>
+    <input type="text" name = "comment" id="idComment" placeholder="Enter Comment"></input><br>
+		<label for="idLink" style="margin: auto 120px">Link</label>
+    <input type="text" name = "link" id="idLink" placeholder="Enter Link"> <br><br>
     <input type="submit" id="commentBtn"class="btn btn-outline-warning">
-</div>
+  </form> 
   </form>
+	</div>
